# kime-engine-bench

./: .envrc  Cargo.toml  README.md  build.rs  shell.nix  update_binding.sh  wrapper.h
benches/: keyinput.rs
nix/: sources.json
src/: hangul.rs  lib.rs
