[package]
name = "kime-engine-bench"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"
links = "hangul"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kime-engine-cffi = { git = "https://github.com/Riey/kime", branch = "develop" }

[build-dependencies]
bindgen = "0.57.0"

[dev-dependencies]
criterion = { version = "0.3.4", features = ["html_reports"] }

[[bench]]
name = "keyinput"
harness = false
