[package]
name = "kime-engine-bench"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"

[features]
check = []

[dependencies]
kime-engine-backend = { git = "https://github.com/Riey/kime", branch = "develop" }
kime-engine-backend-hangul = { git = "https://github.com/Riey/kime", branch = "develop" }

[dev-dependencies]
criterion = { version = "0.3.4", features = ["html_reports"] }

[[bench]]
name = "keyinput"
harness = false
